# btcc_rust_stratum_miner

./: Cargo.toml
.cargo/: config.toml
docs/: README.md
src/: job.rs  main.rs  stratum.rs
src/gpu/: metal_impl.rs  mod.rs  stub.rs
